--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
 	<title>Text to Speech</title>
-
+	<meta charset="utf-8">
+        <meta name="title" content="Text To Speech">
+        <meta name="description" content="A simple text synthesizer web app">
+        <meta name="keywords" content="text, speech, synthesizer">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:title" content="Text To Speech" />
+        <meta property="og:type" content="web app" />
+        <meta property="og:url" content="https://robertomarinas.github.io/text-to-speech/" />
+        <meta property="og:description" content="A simple text synthesizer web app" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 	<style>
