--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta property="og:title" content="Text To Speech" />
         <meta property="og:type" content="web app" />
         <meta property="og:url" content="https://robertomarinas.github.io/text-to-speech/" />
+	<meta property="og:image" content="" />
         <meta property="og:description" content="A simple text synthesizer web app" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
